# CacheSimulation-RISC-V

./: CMakeLists.txt  REPORT.md  c_to_assembler.asm  c_to_assembler_with_marks.asm  main.cpp  rv32.asm
.github/workflows/: ci.yaml
include/: ArgParser.cpp  ArgParser.h  Lru.cpp  Lru.hpp  Plru.cpp  Plru.hpp  RISK32I.cpp  RISK32I.hpp  RISK32M.cpp  RISK32M.hpp  RiskVcommand.cpp  RiskVcommand.hpp  processor.cpp  processor.hpp  ram.hpp  regesters.cpp  regesters.hpp
